ich bin zweiter änderderer

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ fioriHtmlRunner.html
 visual_ext_index.html
 /webapp/visual_ext_index.html
 /.user.project.json
+
+//ich schreibe zuerst
+
+//ich als zweites
