--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ visual_ext_index.html
 /webapp/visual_ext_index.html
 /.user.project.json
 
-//ich schreibe zuerst
+//ich schreeeiiie zuerst
 
 //ich als zweites
